// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Change password page > Calls the change password method with valid data 1`] = `
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Change your password</h1>
  <form class="pdap-form flex flex-col" id="change-password" name="change-password">
    <!---->
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="password" name="password" placeholder="Your updated password" type="password">
      <!---->
      <label class="pdap-input-label" for="password">Password</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="confirmPassword" name="confirmPassword" placeholder="Confirm your updated password" type="password">
      <!---->
      <label class="pdap-input-label" for="confirmPassword">Confirm Password</label>
    </div>
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Change password</button>
  </form>
</main>
`;

exports[`Change password page > Renders error message with mismatched passwords when trying to sign up and re-validates form 1`] = `
<main class="pdap-flex-container mx-auto max-w-2xl">
  <h1>Change your password</h1>
  <form class="pdap-form flex flex-col" id="change-password" name="change-password">
    <div class="pdap-form-error-message">Passwords do not match, please try again.</div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="password" name="password" placeholder="Your updated password" type="password">
      <!---->
      <label class="pdap-input-label" for="password">Password</label>
    </div>
    <div class="pdap-grid-container pdap-input">
      <!---->
      <input id="confirmPassword" name="confirmPassword" placeholder="Confirm your updated password" type="password">
      <!---->
      <label class="pdap-input-label" for="confirmPassword">Confirm Password</label>
    </div>
    <button class="pdap-button pdap-button-primary max-w-full" type="submit">Change password</button>
  </form>
</main>
`;
